--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,29 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  botanical
 
+
+# enable author profile, reading time, and comments, and sharing links
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
+include: ["_pages"]
 # Build settings
 markdown: kramdown
-theme: minima
+theme: minimal-mistakes-jekyll
+# theme: minima
 plugins:
   - jekyll-feed
-
+  - jekyll-include-cache
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
